Junit test for CMC Spring SDK, ssl handshake tests for 1 way ssl, refactoring